# firefighter-software-mvp

./: .env.example  .gitignore  CLAUDE.md  DESIGN.json  DESIGN.md  MVP.md  PRODUCT.md  README.md  context.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: main.py  pyproject.toml
apps/api/core/: config.py  db.py  deps.py  security.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: b5fcfa402021_initial_schema.py  c3f7a9b24d01_mvp_schema_cleanup.py  d1e8f3c92a47_incident_sequence.py  e2a4c6f8b1d3_voice_session_extraction.py  f3a7b2c9d1e5_add_equipment_tables.py  g4b8c3d5e2f1_add_scheduling_and_training.py  (+7 more)
apps/api/models/: __init__.py  apparatus.py  attachment.py  base.py  checklist.py  department.py  equipment.py  incident.py  mutual_aid.py  notification.py  ppe.py  scba.py  scheduling.py  sync_record.py  training.py  user.py  voice_log.py  voice_session.py
apps/api/routers/: __init__.py  analytics.py  assets.py  attachments.py  auth.py  cad.py  checklists.py  equipment.py  imports.py  incidents.py  mutual_aid.py  notifications.py  roster.py  scheduling.py  sync.py  training.py  voice.py  voice_logs.py
apps/api/schemas/: assets.py  attachments.py  auth.py  cad.py  checklist.py  equipment.py  imports.py  incident.py  mutual_aid.py  roster.py  scheduling.py  sync.py  training.py  voice.py
apps/api/services/: assets_service.py  auth_service.py  checklist_service.py  extraction_service.py  import_service.py  incident_service.py  sync_service.py  voice_review_service.py
apps/api/tests/: test_tenancy.py  test_voice.py
(+122 files in other folders)
